--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "next start",
+    "all": "concurrently \"npm run dev\" \"npm run dev --prefix server\"",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
     "test": "jest --watch",
     "lint": "next lint"
   },
@@ -15,18 +16,38 @@
     "@fontsource/public-sans": "^4.5.11",
     "@fontsource/quicksand": "^4.5.11",
     "@fontsource/work-sans": "^4.5.12",
-    "@mui/joy": "^5.0.0-alpha.58",
+    "@hookform/resolvers": "^3.1.0",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/joy": "^5.0.0-alpha.85",
+    "@mui/material": "^5.11.8",
     "@next/font": "13.0.7",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.2.2",
+    "cloudinary": "^1.37.0",
     "framer-motion": "^7.10.2",
-    "next": "13.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "mongoose": "^6.9.1",
+    "next": "^13.1.2",
+    "next-auth": "^4.20.1",
+    "next-connect": "^0.13.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.5.0",
+    "react": "^18.2.0",
+    "react-d3-tree": "^3.5.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
+    "react-transition-group": "^4.4.5",
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "concurrently": "^8.1.0",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.0.7",
+    "eslint-config-next": "^13.1.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1"
   }
