--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express-fileupload": "^1.4.0",
     "jose": "^4.13.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "next-auth": "^4.22.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
